# MAI-OS-LABS-cpp-2025

lab1_var8/: CMakeLists.txt  input.txt
lab1_var8/include/: common.h  os_wrapper.h
lab1_var8/src/: child.cpp  os_wrapper_posix.cpp  os_wrapper_win.cpp  parent.cpp
lab2_var13/: CMakeLists.txt
lab2_var13/example/: output.txt
lab2_var13/include/: convolution.h  matrix.h  os_wrapper.h
lab2_var13/src/: convolution.cpp  main.cpp  matrix.cpp  os_wrapper_linux.cpp  os_wrapper_win.cpp
lab3_var8/: CMakeLists.txt  input.txt
lab3_var8/include/: os_wrapper.h  shared.h
lab3_var8/src/: child.cpp  os_wrapper_linux.cpp  os_wrapper_win.cpp  parent.cpp
lab4_var10/: CMakeLists.txt
lab4_var10/include/: contracts.h  os_wrapper.h
lab4_var10/src/: func1_derivative_v1.cpp  func1_derivative_v2.cpp  func2_gcf_v1.cpp  func2_gcf_v2.cpp  main_link.cpp  main_runtime.cpp  os_wrapper.cpp
